--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>RAGNARÖK STORE</title>
+    <link rel="icon" href="icon.png" sizes="32x32">
     <style>
         *{ margin: 0; padding: 5px; }
         body{
